Fixing overlapping names

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -8,7 +8,7 @@ body {
 }
 
 .primary-container {
-    max-width: 1600px;
+    max-width: 1800px;
     width: 90vw;
     margin: 0 auto;
 }
